--- a/app/globals.css
+++ b/app/globals.css
@@ -46,4 +46,15 @@
   .defaultbg {
     @apply bg-gray-50 dark:bg-gray-800
   }
+
+  .searchtag {
+    @apply flex items-center gap-2 px-4 py-2 rounded-full bg-white shadow-lg border border-gray-300 
+           text-gray-900 text-lg transition-all duration-300 ease-in-out;
+
+    @apply dark:bg-gray-800 dark:border-gray-600 dark:text-white dark:hover:bg-gray-700;
+  }
+
+  .deleteicon {
+    @apply w-5 h-5 text-gray-500 hover:text-red-500 transition-colors duration-300 cursor-pointer;
+  }
 }
