--- a/app/globals.css
+++ b/app/globals.css
@@ -4,6 +4,50 @@
 @tailwind components;
 @tailwind utilities;
 
+/* Custom Scrollbar */
+::-webkit-scrollbar {
+  width: 8px;
+  height: 8px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888; /* Default thumb color */
+  border-radius: 4px;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); /* Shadow for the thumb */
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: #555; /* Darker color on hover */
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1; /* Light track color */
+  border-radius: 4px;
+}
+
+::-webkit-scrollbar-track:hover {
+  background-color: #e1e1e1; /* Slightly darker track color on hover */
+}
+
+/* Dark mode custom scrollbar */
+@media (prefers-color-scheme: dark) {
+  ::-webkit-scrollbar-thumb {
+    background-color: #555; /* Dark thumb color */
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #444; /* Darker color on hover */
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: #333; /* Dark track color */
+  }
+
+  ::-webkit-scrollbar-track:hover {
+    background-color: #444; /* Slightly darker track color on hover */
+  }
+}
+
 @layer base {
   /* Input field */
   .inputfield {
@@ -57,4 +101,10 @@
   .deleteicon {
     @apply w-5 h-5 text-gray-500 hover:text-red-500 transition-colors duration-300 cursor-pointer;
   }
+
+  .divider {
+    @apply border-t-2 border-gray-300 dark:border-gray-600
+
+  }
+
 }
